--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
           <button id="increment">+</button>
         </div>
       </div>
-      <script src="index.js"></script>   
+      <script src="script.js"></script>   
 </body>
 </html>
